<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tablaLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNEventoMain"
                style="@style/EstiloTextViewMain"
                android:text="@string/tv_nevento_main" />

            <EditText
                android:id="@+id/etNEventoMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNMunMain"
                style="@style/EstiloTextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_nmun_main" />

            <EditText
                android:id="@+id/etNMunMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDescMain"
                style="@style/EstiloTextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_desc_main" />

            <EditText
                android:id="@+id/etDescMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvFechaMain"
                style="@style/EstiloTextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_fecha_main" />

            <EditText
                android:id="@+id/etFechaMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHoraMain"
                style="@style/EstiloTextViewMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_hora_main" />

            <EditText
                android:id="@+id/etHoraMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnEliminarMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="eliminar"
        android:text="@string/btn_eliminar_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnModificarMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="modificar"
        android:text="@string/btn_modificar_main"
        app:layout_constraintBottom_toTopOf="@+id/btnEliminarMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConsultarMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="consultar"
        android:text="@string/btn_consultar_main"
        app:layout_constraintBottom_toTopOf="@+id/btnModificarMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegistrarMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="registrar"
        android:text="@string/btn_registrar_main"
        app:layout_constraintBottom_toTopOf="@+id/btnConsultarMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>